<?xml version="1.0"?>
<package format="2">
  <name>former_description</name>
  <version>0.2.4</version>
  <description>
    This package includes urdf files of Former
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>realsense2_description</depend>
</package>